TAG: curatorstrainload-6-0-22-9
DATE: 12/20/2023
STAFF: lec
wts2-1354/Accession records with wrong prefix/numeric parts

TAG: curatorstrainload-6-0-22-8
TAG: curatorstrainload-6-0-22-7
TAG: curatorstrainload-6-0-22-6
DATE: 07/13/2023, 07/17/2023
STAFF: lec
wts2-1198/fl2-410/Moving WTS2-686 to curator control

TAG: curatorstrainload-6-0-22-5
TAG: curatorstrainload-6-0-22-4
DATE: 07/10/2023
STAFF: lec
wts2-1229/fl2-433/Curator Strain/Marker/Allele load : fix pending/publish (curatorstrainload)

TAG: curatorstrainload-6-0-22-3
TAG: curatorstrainload-6-0-22-2
DATE: 05/29/2023
STAFF: lec
wts2-902/fl2-344/Strain Curator load
fixed bin/curatorstrainload.sh; touch log error

TAG: curatorstrainload-6-0-22-1
DATE: 05/25/2023
STAFF: lec
wts2-902/fl2-344/Strain Curator load