@@ -1,3 +1,8 @@
+TAG: curatorstrainload-6-0-22-10
+DATE: 01/02/2024
+STAFF: lec
+wts2-1356/fl3-677/curator strain load:  input file contains quotes
+
 TAG: curatorstrainload-6-0-22-9
 DATE: 12/20/2023
 STAFF: lec
